# ecom_bot

./: .flake8  .gitignore  .pre-commit-config.yaml  .project  alembic.ini  pyproject.toml
.github/workflows/: deploy.yml
.run/: start_bot.run.xml
app/: ExceptionLogger.py  __init__.py  bot.py  config.py  constants.py  db.py  log.py  main.py
app/callbacks/: __init__.py  base_callback.py  callback_calculation_request.py  callback_return_paid_course.py  callback_send_course_invoice.py
app/commands/: __init__.py  base_command.py  command_calculation_request.py  command_faq.py  command_payment_exapmle.py  command_show_cources_list.py  command_start.py
app/commands/tests/: test_command_start.py
app/dao/: __init__.py  base_dao.py  chat_dao.py  message_dao.py  user_dao.py
app/fixtures/: base_test_class.py  model_fixture_generator.py  telegram_fixture_generator.py
app/fixtures/tests/: test_model_fixture.py  test_telegram_fixture.py
app/libs/: period.py
app/markup/: __init__.py  base_markup.py  markup_calculation_request.py  markup_cources_list.py  markup_faq.py
app/message_handlers/: __init__.py  base_handler.py  handler_payment_course.py
app/middlewares/: __init__.py  base_middleware.py  middleware_user_message.py
app/models/: __init__.py  base_models.py  chats.py  message.py  payments.py  users.py
app/pre_checkout_handlers/: __init__.py  pre_checkout_handler_cources.py
app/reports/: __init__.py  report_base.py
media/: example_material_stage_1.txt
migrations/: env.py
migrations/versions/: 25cd0689de0d_init_migration.py
(+21 files in other folders)
