[tool.poetry]
name = "demo-ecom-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.14.1"
sqlalchemy = "^2.0.23"
black = "^23.12.1"
requests = "^2.31.0"
pandas = "^2.1.4"
plotly = "^5.18.0"
kaleido = [
    {version = '0.1.0post1', markers = "sys_platform == 'win32'"},
    {version = '0.2.1', markers = "sys_platform == 'linux'"},
]
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
flake8 = "^6.1.0"
autoflake = "^2.2.1"
pre-commit = "^3.6.0"
yesqa = "^1.5.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
